fixed margins on sections to improve alignment

--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,12 @@ body {
     margin: 0;
     font-family: "Roboto", sans-serif;
 	font-size: 1rem;
+    padding: 2em;
 }
 
 main {
-    margin: 1rem 2rem;
+    margin: 1rem auto;
+    max-width: 1600px;
 }
 
 h1 {
@@ -19,6 +21,7 @@ h1 {
 
 h2 {
     font-size: 1.5rem;
+    margin-top: 2em;
 }
 
 /* === Badges === */
@@ -33,7 +36,7 @@ h2 {
     padding: 0.25em 1em;
     font-size: 1.5rem;
     font-weight: 500;
-    margin: 1rem;
+    margin: 0.5em 1em 0.5em 0;
 }
 
 .badge > p {
@@ -93,7 +96,7 @@ h2 {
 .banner {
     display: flex;
     padding: 1em;
-    margin: 1em;
+    margin: 0.5em 1em 1em 0;
     width: 800px;
     border-radius: 6px;
 }
@@ -178,7 +181,7 @@ h2 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 1rem;
+    margin: 2em 1em 0.5em 0;
     border-radius: 10px;
     padding: 0.75em;
 }
